style: fix white space issue

--- a/src/components/Board/Columns/Columns.module.scss
+++ b/src/components/Board/Columns/Columns.module.scss
@@ -5,6 +5,7 @@
   padding: 2.4rem 0 0 1.6rem;
   margin-top: 6.4rem;
   overflow: scroll;
+  height: 100vh;
   z-index: 0;
 
   &::-webkit-scrollbar {
